# opencode-mca-data

./: README.md  build_tables_queries.py  cesap-epc-load-duckdb-data.py  pyproject.toml
docs/: duckdb-llm-docs.txt  polars-llm-docs.txt
