[project]
name = "data-etl-with-duckdb-and-polars"
version = "0.1.0"
description = "Data ETL project using DuckDB and Polars"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "duckdb>=1.4.0",
    "polars>=1.32.0",
    "httpx>=0.27.0",
    "plotly",
    "pyyaml",
    "pyarrow",
    "pyjanitor",
    "requests",
    "geopandas"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

# helps pytest find the source code
[tool.pytest.ini_options]
pythonpath = "src"